--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -872,6 +872,36 @@ ${intelligence.schoolImprovement !== null ? `
 
   
 
+function getPerformanceBadge(level) {
+  if (!level) return "";
+
+  const map = {
+    "Below Expectations": "🔴",
+    "Approaching Expectations": "🟠",
+    "Meeting Expectations": "🟡",
+    "Exceeding Expectations": "🟢",
+    "Not Assessed(X)": "⚪"
+  };
+
+  const icon = map[level] || "⚪";
+
+  return `
+    <span style="
+      display:inline-block;
+      padding:4px 10px;
+      border-radius:20px;
+      font-size:0.85rem;
+      font-weight:600;
+      background:#f3f4f6;
+      border:1px solid #ddd;
+    ">
+      ${icon} ${level}
+    </span>
+  `;
+}
+
+
+  
 function renderGrouped(grouped, avgMap) {
 
   return Object.entries(grouped).map(([student, subjects]) => {
@@ -1027,8 +1057,8 @@ const strandOutcomes = (strandMap && strandMap[assessmentId]) || [];
           <tr style="background:${levelColor[r.level] || '#fff'}">
 
 <td>
-  ${r.core_competencies ? `<strong>Core:</strong> ${r.core_competencies}<br>` : ""}
-  ${r.subject_competencies ? `<strong>Subject:</strong> ${r.subject_competencies}` : ""}
+  ${r.core_competencies ? `<div><strong>Core:</strong> ${r.core_competencies}</div>` : ""}
+  ${r.subject_competencies ? `<div><strong>Subject:</strong> ${r.subject_competencies.replace(/,/g, ", ")}</div>` : ""}
 </td>
            
             <td>${r.level || "—"}</td>
@@ -1163,9 +1193,11 @@ function generateInsight(subjects) {
   }
 
 return `
-  <p>
-    Overall, based on current evidence, the learner is <strong>${overall}</strong>${strengthSentence}.
-  </p>
+ <p>
+  Overall, based on current evidence, the learner is 
+  ${getPerformanceBadge(overall)}
+  ${strengthSentence}.
+</p>
 `;
 }
 
