--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -874,15 +874,28 @@ ${intelligence.schoolImprovement !== null ? `
 function getPerformanceBadge(level) {
   if (!level) return "";
 
-  const map = {
-    "Below Expectations": "🔴 Below Expectations",
-    "Approaching Expectations": "🟠 Approaching Expectations",
-    "Meeting Expectations": "🟡 Meeting Expectations",
-    "Exceeding Expectations": "🟢 Exceeding Expectations",
-    "Not Assessed(X)": "⚪ Not Assessed"
+  const styles = {
+    "Below Expectations": "background:#fee2e2;color:#b91c1c;",
+    "Approaching Expectations": "background:#ffedd5;color:#c2410c;",
+    "Meeting Expectations": "background:#fef9c3;color:#854d0e;",
+    "Exceeding Expectations": "background:#dcfce7;color:#166534;",
+    "Not Assessed(X)": "background:#e5e7eb;color:#374151;"
   };
 
-  return map[level] || `⚪ ${level}`;
+  const style = styles[level] || "background:#e5e7eb;color:#374151;";
+
+  return `
+    <span style="
+      display:inline-block;
+      padding:4px 10px;
+      border-radius:20px;
+      font-size:0.85rem;
+      font-weight:600;
+      ${style}
+    ">
+      ${level}
+    </span>
+  `;
 }
 
   
