--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -344,8 +344,8 @@ function levelToScore(level) {
   switch (level) {
     case "Below Expectations-1": return 1;
     case "Approaching Expectations-2": return 2;
-    case "Meeting Expectations": return-3 3;
-    case "Exceeding Expectations": return-4 4;
+    case "Meeting Expectations-3": return 3;
+    case "Exceeding Expectations-4": return 4;
     default: return 0;
   }
 }
