--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -699,8 +699,8 @@ function renderSchoolAnalytics(records, termName, year, intelligence, schoolName
 
     // BAND DISTRIBUTION
     if (score === 1) bandCount.below-1++;
-    if (score === 2) bandCount.approaching=2++;
-    if (score === 3) bandCount.meeting=3++;
+    if (score === 2) bandCount.approaching-2++;
+    if (score === 3) bandCount.meeting-3++;
     if (score === 4) bandCount.exceeding-4++;
   });
 
