--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -342,10 +342,10 @@ let previousAverages = {};
 
 function levelToScore(level) {
   switch (level) {
-    case "Below Expectations": return 1;
-    case "Approaching Expectations": return 2;
-    case "Meeting Expectations": return 3;
-    case "Exceeding Expectations": return 4;
+    case "Below Expectations(1)": return 1;
+    case "Approaching Expectations(2)(": return 2;
+    case "Meeting Expectations(3)": return 3;
+    case "Exceeding Expectations(4)": return 4;
     default: return 0;
   }
 }
@@ -353,10 +353,10 @@ function levelToScore(level) {
   
 
 const levelColor = {
-  "Below Expectations": "#f8d7da",
-  "Approaching Expectations": "#fff3cd",
-  "Meeting Expectations": "#d4edda",
-  "Exceeding Expectations": "#cce5ff"
+  "Below Expectations(1)": "#f8d7da",
+  "Approaching Expectations(2)": "#fff3cd",
+  "Meeting Expectations(3)": "#d4edda",
+  "Exceeding Expectations(4)": "#cce5ff"
 };
 
 
@@ -682,7 +682,7 @@ function renderSchoolAnalytics(records, termName, year, intelligence, schoolName
 
   let classMap = {};
   let subjectMap = {};
-  let bandCount = { below: 0, approaching: 0, meeting: 0, exceeding: 0 };
+  let bandCount = { below(1): 0, approaching(2): 0, meeting(3): 0, exceeding(4): 0 };
 
   // ===== PROCESS DATA =====
   records.forEach(r => {
@@ -698,16 +698,16 @@ function renderSchoolAnalytics(records, termName, year, intelligence, schoolName
     if (score > 0) subjectMap[r.subject].push(score);
 
     // BAND DISTRIBUTION
-    if (score === 1) bandCount.below++;
-    if (score === 2) bandCount.approaching++;
-    if (score === 3) bandCount.meeting++;
-    if (score === 4) bandCount.exceeding++;
+    if (score === 1) bandCount.below(1)++;
+    if (score === 2) bandCount.approaching(2)++;
+    if (score === 3) bandCount.meeting(3)++;
+    if (score === 4) bandCount.exceeding(4)++;
   });
 
 
   // ===== AT-RISK COUNT =====
   const atRiskLearners = records.filter(
-    r => r.level === "Below Expectations"
+    r => r.level === "Below Expectations(1)"
   ).length;
 
   // ===== AVERAGE FUNCTION =====
@@ -840,10 +840,10 @@ ${intelligence.schoolImprovement !== null ? `
       <!-- 3️⃣ BAND DISTRIBUTION -->
       <h4 style="margin-top:20px;">3️⃣ Performance Band Distribution</h4>
       <p>
-        🔴 Below: ${bandCount.below} |
-        🟡 Approaching: ${bandCount.approaching} |
-        🔵 Meeting: ${bandCount.meeting} |
-        🟢 Exceeding: ${bandCount.exceeding}
+        🔴 Below(1): ${bandCount.below} |
+        🟡 Approaching(2): ${bandCount.approaching} |
+        🔵 Meeting(3): ${bandCount.meeting} |
+        🟢 Exceeding(4): ${bandCount.exceeding}
       </p>
 
       <!-- 4️⃣ RISK SUMMARY -->
@@ -875,10 +875,10 @@ function getPerformanceBadge(level) {
   if (!level) return "";
 
   const styles = {
-    "Below Expectations": "background:#fee2e2;color:#b91c1c;",
-    "Approaching Expectations": "background:#ffedd5;color:#c2410c;",
-    "Meeting Expectations": "background:#fef9c3;color:#854d0e;",
-    "Exceeding Expectations": "background:#dcfce7;color:#166534;",
+    "Below Expectations(1)": "background:#fee2e2;color:#b91c1c;",
+    "Approaching Expectations(2)": "background:#ffedd5;color:#c2410c;",
+    "Meeting Expectations(3)": "background:#fef9c3;color:#854d0e;",
+    "Exceeding Expectations(4)": "background:#dcfce7;color:#166534;",
     "Not Assessed(X)": "background:#e5e7eb;color:#374151;"
   };
 
@@ -994,10 +994,10 @@ function renderGrouped(grouped, avgMap) {
       }
 
       function getAchievementLabel(score) {
-        if (score >= 3.5) return "Exceeding Expectations";
-        if (score >= 2.5) return "Meeting Expectations";
-        if (score >= 1.5) return "Approaching Expectations";
-        return "Below Expectations";
+        if (score >= 3.5) return "Exceeding Expectations(4)";
+        if (score >= 2.5) return "Meeting Expectations(3)";
+        if (score >= 1.5) return "Approaching Expectations(2)";
+        return "Below Expectations(1)";
       }
 
       function getAvgColor(score) {
@@ -1069,10 +1069,10 @@ const strandOutcomes = (strandMap && strandMap[assessmentId]) || [];
 <tr style="
   background:${levelColor[(r.level || "").trim()] || '#fff'};
   border-left:4px solid ${
-    (r.level || "").trim() === "Below Expectations" ? "#e74c3c" :
-    (r.level || "").trim() === "Approaching Expectations" ? "#f1c40f" :
-    (r.level || "").trim() === "Meeting Expectations" ? "#3498db" :
-    (r.level || "").trim() === "Exceeding Expectations" ? "#2ecc71" :
+    (r.level || "").trim() === "Below Expectations(1)" ? "#e74c3c" :
+    (r.level || "").trim() === "Approaching Expectations(2)" ? "#f1c40f" :
+    (r.level || "").trim() === "Meeting Expectations(3)" ? "#3498db" :
+    (r.level || "").trim() === "Exceeding Expectations(4)" ? "#2ecc71" :
     "#ccc"
   };
 ">
@@ -1188,10 +1188,10 @@ function generateInsight(subjects) {
   const overallAvg = total / count;
 
   const overall =
-    overallAvg >= 3.5 ? "exceeding expectations" :
-    overallAvg >= 2.5 ? "meeting expectations" :
-    overallAvg >= 1.5 ? "approaching expectations" :
-    "below expectations";
+    overallAvg >= 3.5 ? "exceeding expectations(4)" :
+    overallAvg >= 2.5 ? "meeting expectations(3)" :
+    overallAvg >= 1.5 ? "approaching expectations(2)" :
+    "below expectations(1)";
 
   const subjectsArray = Object.entries(subjectScores)
     .map(([s, scores]) => ({
