--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -840,10 +840,10 @@ ${intelligence.schoolImprovement !== null ? `
       <!-- 3️⃣ BAND DISTRIBUTION -->
       <h4 style="margin-top:20px;">3️⃣ Performance Band Distribution</h4>
       <p>
-        🔴 Below(1): ${bandCount.below} |
-        🟡 Approaching(2): ${bandCount.approaching} |
-        🔵 Meeting(3): ${bandCount.meeting} |
-        🟢 Exceeding(4): ${bandCount.exceeding}
+        🔴 Below: ${bandCount.below} |
+        🟡 Approaching: ${bandCount.approaching} |
+        🔵 Meeting: ${bandCount.meeting} |
+        🟢 Exceeding: ${bandCount.exceeding}
       </p>
 
       <!-- 4️⃣ RISK SUMMARY -->
