--- a/assessments.html
+++ b/assessments.html
@@ -471,7 +471,19 @@ document.getElementById("saveAssessment").onclick = async () => {
 
   const schoolId = profile.school_id;
   const today = new Date().toISOString();
-  const assessmentTitle = `${subjectData.name} - ${document.getElementById("termSelect").selectedOptions[0].text} (${academicYear})`;
+// Count existing assessments for this subject + term + year
+const { data: existingList } = await supabase
+  .from("assessments")
+  .select("id")
+  .eq("class_id", classId)
+  .eq("subject_id", subjectId)
+  .eq("term_id", termId)
+  .eq("academic_year", academicYear);
+
+const sequence = (existingList?.length || 0) + 1;
+
+// Title with sequence
+const assessmentTitle = `${subjectData.name} - ${document.getElementById("termSelect").selectedOptions[
 
   // 🔎 Check existing assessment
   let { data: existingAssessment } = await supabase.from("assessments")
