--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1076,7 +1076,14 @@ const strandOutcomes = (strandMap && strandMap[assessmentId]) || [];
     "#ccc"
   };
 ">
-<td>
+
+
+<td style="
+  border:1px solid #000;
+  padding:8px;
+  word-wrap: break-word;
+  white-space: normal;
+">
   ${r.core_competencies ? `<div><strong>Core:</strong> ${r.core_competencies}</div>` : ""}
   ${r.subject_competencies ? `<div><strong>Subject:</strong> ${r.subject_competencies.replace(/,/g, ", ")}</div>` : ""}
 </td>
